declare user input variables andif, else if test for UI Logic

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <form class="" action="index.html" method="post">
+
+          <form id="userChoice" action="index.html" method="post">
             <div class="checkbox">
             <div class="radio">
                  <h3>Do you like to focus on simplicity and productivity?</h3>
              <label>
 
-               <input type="radio" name="optionsRadios" value="option1" checked>
+               <input type="radio" name="ruby" value="option1" >
                 <span>yes I do</span>
              </label>
             </div>
@@ -28,28 +29,28 @@
               <h3>Do you like to Design or Plan Projects?</h3>
              <label>
 
-               <input type="radio" name="optionsRadios" value="option2" checked>
+               <input type="radio" name="design" value="option2" >
                <span>Yes I do
              </label>
             </div>
             <div class="radio">
                 <h3>Are you interested in building content heavy sites like?</h3>
              <label>
-               <input type="radio" name="optionsRadios" value="option3" checked>
-               <span>Yes I do</span>
+               <input type="radio" name="php"value="option3">
+                <span>Yes I do</span>
              </label>
             </div>
             <div class="radio">
-                <h3>are you interested in Web Development?</h3>
+                <h3>Are you interested in building internal software?</h3>
              <label>
-               <input type="radio" name="optionsRadios" value="option3" checked>
+               <input type="radio" name="cHash" value="option4" >
                   <span>Yes I do</span>
              </label>
             </div>
             <div class="radio">
                 <h3>Do any of these questions apply to you?</h3>
              <label>
-               <input type="radio" name="optionsRadios" value="option3" checked>
+               <input type="radio" name="moreTracks" value="option5" >
                <span>Show me more tracks.</span>
              </label>
             </div>
