--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
             <button type="submit" name="button">submit</button>
           </form>
         </div>
+        <div class="row">
+          <div class="col-md-3">
+            <img src="img/ruby.png" alt="Ruby">
+          </div>
+          <div class="col-md-3">
+            <img src="img/design.png" alt="Design">
+          </div>
+          <div class="col-md-3">
+            <img src="php.png" alt="PHP">
+          </div>
+          <div class="col-md-3">
+            <img src="csharp.png" alt="C#">
+          </div>
+        </div>
+       </div>
       </div>
     </div>
   </body>
