add full functionality when the user chooses the first four options of the form

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <img src="img/ruby.png" alt="Ruby">
+            <img id="showRuby" src="img/ruby.png" alt="Ruby">
           </div>
           <div class="col-md-3">
-            <img src="img/design.png" alt="Design">
+            <img id="showDesign" src="img/design.jpg" alt="Design">
           </div>
           <div class="col-md-3">
-            <img src="php.png" alt="PHP">
+            <img id="showPHP" src="img/php.png" alt="PHP">
           </div>
           <div class="col-md-3">
-            <img src="csharp.png" alt="C#">
+            <img id="showCsharp" src="img/csharp.png" alt="C#">
           </div>
         </div>
        </div>
