make images into links to nowhere for testing and add files for track description pages

--- a/index.html
+++ b/index.html
@@ -59,16 +59,17 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <img id="showRuby" src="img/ruby.png" alt="Ruby">
+            <a href="#">
+              <img id="showRuby" src="img/ruby.png" alt="Ruby"></a>
           </div>
           <div class="col-md-3">
-            <img id="showDesign" src="img/design.jpg" alt="Design">
+            <a href="#"><img id="showDesign" src="img/design.jpg" alt="Design"></a>
           </div>
           <div class="col-md-3">
-            <img id="showPHP" src="img/php.png" alt="PHP">
+            <a href="#"><img id="showPHP" src="img/php.png" alt="PHP"></a>
           </div>
           <div class="col-md-3">
-            <img id="showCsharp" src="img/csharp.png" alt="C#">
+            <a href="#"><img id="showCsharp" src="img/csharp.png" alt="C#"></a>
           </div>
         </div>
        </div>
