--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <a href="#">
+            <a href="rubyDescription.html">
               <img id="showRuby" src="img/ruby.png" alt="Ruby"></a>
           </div>
           <div class="col-md-3">
-            <a href="#"><img id="showDesign" src="img/design.jpg" alt="Design"></a>
+            <a href="designDescription.html"><img id="showDesign" src="img/design.jpg" alt="Design"></a>
           </div>
           <div class="col-md-3">
-            <a href="#"><img id="showPHP" src="img/php.png" alt="PHP"></a>
+            <a href="phpDescription.html"><img id="showPHP" src="img/php.png" alt="PHP"></a>
           </div>
           <div class="col-md-3">
-            <a href="#"><img id="showCsharp" src="img/csharp.png" alt="C#"></a>
+            <a href="cHashDescription.html"><img id="showCsharp" src="img/csharp.png" alt="C#"></a>
           </div>
         </div>
        </div>
