--- a/rubyDescription.html
+++ b/rubyDescription.html
@@ -15,9 +15,13 @@
         <div class="centeredDiv center-block">
           <h2>Description:</h2>
           <ul>
-            <li>hi</li>
-            <li>yeah this is cool</li>
-            <li>whoooaaa</li>
+            <li>Focused on simplicity and productivity.</li>
+            <li>It has an elegant syntax that is natural to read and easy to write.</li>
+            <li>Ruby is a dynamic, reflective, object-oriented, general-purpose programming language.</li>
+            <li>High in Demand</li>
+            <li>Learning Ruby is a prerequisite to learning Ruby on Rails</li>
+            <li>Ruby has pre-written frameworks and libraries like Ruby on Rails and Chef.</li>
+            <li><a href="https://www.epicodus.com/ruby/">www.epicodus.com/ruby/</a></li>
           </ul>
       </div>
     </div>
