--- a/phpDescription.html
+++ b/phpDescription.html
@@ -5,7 +5,8 @@
        <link rel="stylesheet" href="css/styles.css">
        <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
        <script type="text/javascript" src="js/scripts.js"></script>
-    <title></title>
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet"> 
+    <title>PHP</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -14,15 +15,14 @@
       </div>
         <div class="centeredDiv center-block">
           <h2>Description:</h2>
-          <ul>
-            <li></li>
-            <li>.</li>
-            <li></li>
-            <li>test</li>
-            <li>test</li>
-            <li>test</li>
+          <ol>
+            <li>Easy to Get Started With</li>
+            <li>PHP was designed to make web development easier, and many beginners find it effortless to pick up and get started with.</li>
+            <li>PHP is more forgiving of errors.</li>
+            <li> a widely-used open source general-purpose scripting language that is especially suited for web development and can be embedded into HTML.</li>
+            <li> PHP is mainly focused on server-side scripting,</li>
             <li><a href="https://www.epicodus.com/php/">www.epicodus.com/php/</a></li>
-          </ul>
+          </ol>
       </div>
     </div>
   </body>
