--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
        <link rel="stylesheet" href="css/styles.css">
        <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
        <script type="text/javascript" src="js/scripts.js"></script>
+       <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet"> 
     <title></title>
   </head>
   <body>
