--- a/rubyDescription.html
+++ b/rubyDescription.html
@@ -5,7 +5,8 @@
        <link rel="stylesheet" href="css/styles.css">
        <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
        <script type="text/javascript" src="js/scripts.js"></script>
-    <title></title>
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet">
+    <title>Ruby</title>
   </head>
   <body>
     <div class="container-fluid">
