add styles to fonts in all header span elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <link rel="stylesheet" href="css/styles.css">
        <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
        <script type="text/javascript" src="js/scripts.js"></script>
-       <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet"> 
+       <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet">
     <title></title>
   </head>
   <body>
@@ -15,7 +15,6 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-
           <form id="userChoice" action="index.html" method="post">
             <div class="checkbox">
             <div class="radio">
@@ -23,7 +22,7 @@
              <label>
 
                <input type="radio" name="ruby" value="option1" >
-                <span>yes I do</span>
+                <span>Yes</span>
              </label>
             </div>
             <div class="radio">
@@ -31,28 +30,28 @@
              <label>
 
                <input type="radio" name="design" value="option2" >
-               <span>Yes I do
+               <span>Yes</span>
              </label>
             </div>
             <div class="radio">
-                <h4>Are you interested in building content heavy sites like?</h4>
+                <h4>Are you interested in building content heavy sites?</h4>
              <label>
                <input type="radio" name="php"value="option3">
-                <span>Yes I do</span>
+                <span>Yes</span>
              </label>
             </div>
             <div class="radio">
                 <h4>Are you interested in building internal software?</h4>
              <label>
                <input type="radio" name="cHash" value="option4" >
-                  <span>Yes I do</span>
+                  <span>Yes</span>
              </label>
             </div>
             <div class="radio">
                 <h4>Do any of these questions apply to you?</h4>
              <label>
                <input type="radio" name="moreTracks" value="option5" >
-               <span>Show me more tracks.</span>
+               <span>Show me more Tracks.</span>
              </label>
             </div>
             <button type="submit" name="button">submit</button>
