postion h1 element in the header/div

--- a/cHashDescription.html
+++ b/cHashDescription.html
@@ -5,7 +5,7 @@
        <link rel="stylesheet" href="css/styles.css">
        <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
        <script type="text/javascript" src="js/scripts.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet">
     <title>C#</title>
   </head>
   <body>
@@ -19,7 +19,7 @@
             <li>The C# ("C sharp") is most commonly used with the .NET framework.</li>
             <li>You can use it to create client applications, database applications, distributed components, and much more.</li>
             <li>C# is most popular among bigger established businesses, often for building internal software.</li>
-            <li>C# (pronounced "C-sharp") is an object-oriented programming language</li>
+            <li>C# (pronounced "C-sharp") is an object-oriented programming language.</li>
             <li> C# is based on C++ and contains features similar to those of Java.</li>
 .            <li><a href="https://www.epicodus.com/c-sharp/">www.epicodus.com/c-sharp/</a></li>
           </ul>
