--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <form id="userChoice" action="index.html" method="post">
             <div class="checkbox">
             <div class="radio">
-                 <h4>Do you like to focus on simplicity and productivity?</h3>
+                 <h4 id="headerTop">Do you like to focus on simplicity and productivity?</h3>
              <label>
 
                <input type="radio" name="ruby" value="option1" >
@@ -48,10 +48,10 @@
              </label>
             </div>
             <div class="radio">
-                <h4>Do any of these questions apply to you?</h4>
+                <h4 id="headerBottom">Do any of these questions apply to you?</h4>
              <label>
                <input type="radio" name="moreTracks" value="option5" >
-               <span>Show me more Tracks.</span>
+               <span>No</span>
              </label>
             </div>
             <button type="submit" name="button">submit</button>
