direct you to epicodus/portland/tracks available that are available when you check no in the form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              </label>
             </div>
             <div class="radio">
-                <h4 id="headerBottom">Do any of these questions apply to you?</h4>
+                <h4 id="headerBottom">Do any of these questions apply to you? If not check no and check out more tracks! </h4>
              <label>
                <input type="radio" name="moreTracks" value="option5" >
                <span>No</span>
