fix html indentation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-       <link rel="stylesheet" href="css/bootstrap.css">
-       <link rel="stylesheet" href="css/styles.css">
-       <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
-       <script type="text/javascript" src="js/scripts.js"></script>
-       <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet">
-    <title></title>
+     <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="stylesheet" href="css/styles.css">
+     <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+     <script type="text/javascript" src="js/scripts.js"></script>
+     <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Flamenco|NTR" rel="stylesheet">
+    <title>Track Suggester</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -17,42 +17,41 @@
         <div class="col-md-12">
           <form id="userChoice" action="index.html" method="post">
             <div class="checkbox">
-            <div class="radio">
-                 <h4 id="headerTop">Do you like to focus on simplicity and productivity?</h3>
-             <label>
-
-               <input type="radio" name="ruby" value="option1" >
-                <span>Yes</span>
-             </label>
-            </div>
-            <div class="radio">
-              <h4>Do you like to Design or Plan Projects?</h4>
-             <label>
-
-               <input type="radio" name="design" value="option2" >
-               <span>Yes</span>
-             </label>
-            </div>
-            <div class="radio">
+              <div class="radio">
+               <h4 id="headerTop">Do you like to focus on simplicity and productivity?</h3>
+               <label>
+                 <input type="radio" name="ruby" value="option1" >
+                 <span>Yes</span>
+               </label>
+              </div>
+              <div class="radio">
+                <h4>Do you like to Design or Plan Projects?</h4>
+                <label>
+                 <input type="radio" name="design" value="option2" >
+                 <span>Yes</span>
+                </label>
+              </div>
+              <div class="radio">
                 <h4>Are you interested in building content heavy sites?</h4>
-             <label>
-               <input type="radio" name="php"value="option3">
-                <span>Yes</span>
-             </label>
-            </div>
-            <div class="radio">
-                <h4>Are you interested in building internal software?</h4>
-             <label>
-               <input type="radio" name="cHash" value="option4" >
+                <label>
+                  <input type="radio" name="php"value="option3">
                   <span>Yes</span>
-             </label>
-            </div>
-            <div class="radio">
+                </label>
+              </div>
+              <div class="radio">
+                <h4>Are you interested in building internal software?</h4>
+                  <label>
+                   <input type="radio" name="cHash" value="option4" >
+                   <span>Yes</span>
+                </label>
+              </div>
+              <div class="radio">
                 <h4 id="headerBottom">Do any of these questions apply to you? If not check no and check out more tracks! </h4>
-             <label>
-               <input type="radio" name="moreTracks" value="option5" >
-               <span>No</span>
-             </label>
+                <label>
+                  <input type="radio" name="moreTracks" value="option5" >
+                  <span>No</span>
+                </label>
+              </div>
             </div>
             <button type="submit" name="button">submit</button>
           </form>
@@ -60,7 +59,7 @@
         <div class="row">
           <div class="col-md-3">
             <a href="rubyDescription.html">
-              <img id="showRuby" src="img/ruby.png" alt="Ruby"></a>
+            <img id="showRuby" src="img/ruby.png" alt="Ruby"></a>
           </div>
           <div class="col-md-3">
             <a href="designDescription.html"><img id="showDesign" src="img/design.jpg" alt="Design"></a>
