--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                   <span>No</span>
                 </label>
               </div>
+              <button class="btn btn-default" type="submit" name="button">submit</button>
             </div>
-            <button type="submit" name="button">submit</button>
           </form>
         </div>
         <div class="row">
