add a hover over feature to all images to simulate a button being pressed down

--- a/rubyDescription.html
+++ b/rubyDescription.html
@@ -19,7 +19,7 @@
             <li>Focused on simplicity and productivity.</li>
             <li>It has an elegant syntax that is natural to read and easy to write.</li>
             <li>Ruby is a dynamic, reflective, object-oriented, general-purpose programming language.</li>
-            <li>High in Demand</li>
+            <li>High in Demand.</li>
             <li>Learning Ruby is a prerequisite to learning Ruby on Rails</li>
             <li>Ruby has pre-written frameworks and libraries like Ruby on Rails and Chef.</li>
             <li><a href="https://www.epicodus.com/ruby/">www.epicodus.com/ruby/</a></li>
