--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <a href="rubyDescription.html">
-            <img id="showRuby" src="img/ruby.png" alt="Ruby"></a>
+            <a href="rubyDescription.html"><img id="showRuby" src="img/ruby.png" alt="Ruby"></a>
           </div>
           <div class="col-md-3">
             <a href="designDescription.html"><img id="showDesign" src="img/design.jpg" alt="Design"></a>
