add a boostrap class to fit the webpage to a smaller viewport

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Track Suggestions</h1>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-6 col-md-12">
           <form id="userChoice" action="index.html" method="post">
             <div class="checkbox">
               <div class="radio">
@@ -52,7 +52,7 @@
                   <span>No</span>
                 </label>
               </div>
-              <button class="btn btn-default" type="submit" name="button">submit</button>
+              <button class="btn btn-info" type="submit" name="button">submit</button>
             </div>
           </form>
         </div>
