--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <span>No</span>
                 </label>
               </div>
-              <button class="btn btn-info" type="submit" name="button">submit</button>
+              <button class="btn btn-info center-block" type="submit" name="button">submit</button>
             </div>
           </form>
         </div>
